bootstrap/infrab.yml
---
# File: templates/service-kong-metrics-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kong-metrics-svc
  namespace: infrab
  labels:
    app.kubernetes.io/name: kong-metrics-svc
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: State8
    cloudman.io/user: rmay-struct
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  type: ClusterIP
  ports:
    - name: metrics
      port: 8100
      targetPort: 8100
      protocol: TCP
  selector:
    app.kubernetes.io/name: kong

---
# File: templates/service-kong-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kong-svc
  namespace: infrab
  labels:
    app.kubernetes.io/name: kong-svc
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: State8
    cloudman.io/user: rmay-struct
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  type: ClusterIP
  ports:
    - name: http-80
      port: 80
      targetPort: 8002
      protocol: TCP
  selector:
    app.kubernetes.io/name: kong

---
# File: templates/gatewayclass-kong-class.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: kong-class
  annotations:
    argocd.argoproj.io/sync-wave: "3"
  labels:
    app.kubernetes.io/name: kong-class
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: State8
    cloudman.io/user: rmay-struct
spec:
  controllerName: konghq.com/gateway-operator
  parametersRef:
    group: gateway-operator.konghq.com
    kind: GatewayConfiguration
    name: prod-config
    namespace: infrab

---
# File: templates/gateway-gapi.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gapi
  labels:
    app.kubernetes.io/name: gapi
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: State8
    cloudman.io/user: rmay-struct
  namespace: infrab
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  gatewayClassName: kong-class
  listeners:
    - name: g-api3
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - group: gateway.networking.k8s.io
            kind: HTTPRoute

---
# File: templates/httproute-route2-argo1.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route2-argo1
  namespace: infrab
  labels:
    app.kubernetes.io/name: route2-argo1
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: State8
    cloudman.io/user: rmay-struct
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  parentRefs:
    - name: gapi
      namespace: infrab
      sectionName: g-api3
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argo1-argocd-server
          namespace: argocd1
          port: 80
  hostnames:
    - argo.k8s.admin.billingpay.com.br

---
# File: templates/httproute-route3-kong.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route3-kong
  namespace: infrab
  labels:
    app.kubernetes.io/name: route3-kong
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: State8
    cloudman.io/user: rmay-struct
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  parentRefs:
    - name: gapi
      namespace: infrab
      sectionName: g-api3
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kong-svc
          namespace: infrab
          port: 80
  hostnames:
    - kong.k8s.admin.billingpay.com.br

---
# File: templates/referencegrant-grant-infrab-to-argocd1.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: ReferenceGrant
metadata:
  name: grant-infrab-to-argocd1
  namespace: argocd1
  labels:
    app.kubernetes.io/name: grant-infrab-to-argocd1
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: State8
    cloudman.io/user: rmay-struct
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: infrab
  to:
    - group: ""
      kind: Service
